fix: prompt & placeName & schedule cron